--- a/_posts/2015-10-13-Issues.markdown
+++ b/_posts/2015-10-13-Issues.markdown
@@ -4,7 +4,6 @@ layout: post
 title:  "Issues"
 author: "Sara Tang"
 date:   2015-10-12 03:39:52
-category: "Computational Biology"
 permalink: "issues"
 ---
 
@@ -27,6 +26,7 @@ Add the header stuff that Jekyll needs to the top of output.html:
 layout: post\\
 title: "A Fast Single-Extractor Wait-Free Priority Queue"\\
 author: "Kenneth D. Hoover and Yuanhao Wei"\\
+supervisors: "Professor Faith Ellen"
 date: 2015-10-02 20:44:52\\
 category: "Artificial Intelligence"\\
 \-\-\-
@@ -36,18 +36,25 @@ A couple of notes:
 * The layout must be "post"!
 * The title is whatever you want to appear on the table of contents and at the top of the page of the abstract itself
 * The author(s) is stored as a string
-* I don't remember if the date is automatically generated or not
+* Supervisors must include titles ("Professor", "Doctor", etc.)
+* Date is optional
 * The category is one of "Artificial Intelligence", "Computational Biology", "Computational Graphics", "Human Computer Interaction", "Software Engineering", or "Software Projects". And capitalization matters!
 * If, for some reason, there is a .css file included with the abstract, and the abstract looks very strange without the css formatting, you can drag that .css file into the /css/abstracts folder. Then in the header, simply add:
 
 css: [name-of-css-file].css
 
+###Consistency formatting
+* Top-level section headings (e.g. "Introduction", "Conclusion") have <h1> tags
+* Sub-sections have <h3> tags
+* Acknowledgements and references have <h4> tags
+* Tables and images are inside a <figure> tag, with corresponding <figcaption> tags within the <figure> block.
+* Images are the _assets file, link them with {{site.baseurl}}/assets/IMAGE.JPG
 
-PS: I don't know which category the sample article falls under, I've set it as Artificial Intelligence because it's the first one alphabetically :P
+Some issues: tables have to be encoded in html manually
 
-###More formatting
+
+###Titling the post
 You should now have a .html file that is more-or-less ready to be put into _posts. Remember to name the file with the form YYYY-MM-DD-title.html or Jekyll won't recognize that this is a post...
-
 
 ##Fonts
 I'm using Computer Modern in the abstracts, I believe it supports *italics*, <b>bold</b>, and whatever this is => ${\rm Roman? Semi-bold?}$ Whatever it is, it's rendered using {\rm texthere} in LaTeX.
